syntax = "proto3";

option go_package = "api/";
package github_com.amazingchow.photon_dance_mapreduce;

enum WorkerStatus {
	WORKER_STATUS_ONLINE = 0;
	WORKER_STATUS_OFFLINE = 1;
	WORKER_STATUS_READY = 2;
	WORKER_STATUS_BUSY = 3;
	WORKER_STATUS_UNAVAILABLE = 4;
}

enum TaskType {
	TASK_TYPE_MAP = 0;
	TASK_TYPE_REDUCE = 1;
}

enum TaskStatus {
	TASK_STATUS_UNATTACHED = 0;
	TASK_STATUS_ATTACHED = 1;
	TASK_STATUS_ONDOING = 2;
	TASK_STATUS_DONE = 3;
}

enum IntercomType {
	INTERCOM_TYPE_ASK_TASK = 0;
	INTERCOM_TYPE_FINISH_MAP_TASK = 1;
	INTERCOM_TYPE_FINISH_REDUCE_TASK = 2;
	INTERCOM_TYPE_SEND_INTER_FILE = 3;
}

message Task
{
	repeated string inputs = 1;
}

message Worker
{
	string id = 1;
	WorkerStatus status = 2;
}

/* ---------- request + response ---------- */
message AddTaskRequest
{
	Task task = 1;
}

message AddTaskResponse {}

message ListWorkersRequest {}

message ListWorkersResponse
{
	repeated Worker workers = 1;
}

message IntercomRequest
{
	IntercomType MsgType = 1;
	string MsgContent = 2;
	string Extra = 3;
}

message IntercomResponse
{
	TaskType TaskType = 1;
	string File = 2;
	int32 NReduce = 3;
	int32 MapTaskAttached = 4;
	int32 ReduceTaskAttached = 5;
	repeated string ReduceFiles = 6;
}

/* ---------- grpc gateway ---------- */
service MapReduceRPCService
{
	rpc AddTask(AddTaskRequest) returns (AddTaskResponse) {}
	rpc ListWorkers(ListWorkersRequest) returns (ListWorkersResponse) {}
	rpc Intercom(IntercomRequest) returns (IntercomResponse) {}
}
